--- a/BakedinHeavenAngular/src/app/items/items.component.html
+++ b/BakedinHeavenAngular/src/app/items/items.component.html
@@ -18,7 +18,7 @@
     <li class ="item-details">IsVeg :{{selectedItem.isVeg}}</li>
     <li class ="item-details">Weight in grams :{{selectedItem.weightInGrams}}</li>
     <li class ="item-details">Kcal :{{selectedItem.kcal}}</li>
-    <li class ="item-details">availableDate :{{selectedItem.availableDate}}</li>
+    <li class ="item-details">availableDate :{{selectedItem.availabledate}}</li>
   </div>
 </div>
 <br>
