--- a/BakedinHeavenAngular/src/app/admin/admin.component.html
+++ b/BakedinHeavenAngular/src/app/admin/admin.component.html
@@ -8,6 +8,12 @@
             <th>Item Name</th>  
             <th>Price</th>  
             <th>Quantity</th>
+            <th>WeightInGrams</th>
+            <th>kcal</th>
+            <th>IsVeg</th>
+            <th>IsSpecial</th>
+            <th>Available Date</th>
+            
           </tr>  
         </thead>  
         <tbody>  
@@ -15,14 +21,19 @@
             <td class="hidden">{{item.id}}</td> 
             <td>{{item.name}}</td>  
             <td>{{item.price}}</td>  
-            <td>{{item.quantity}}</td>  
+            <td>{{item.quantity}}</td>
+            <td>{{item.weightInGrams}}</td>  
+            <td>{{item.kcal}}</td>
+            <td>{{item.isVeg}}</td>
+            <td>{{item.isSpecial}}</td>
+            <td>{{item.availabledate}}</td>
             <td>  
-              <button (click)="apiService.deleteItem(item)" class="btn btn-info"> Delete</button>  
+              <button (click)="deleteitem(item)" class="btn btn-info"> Delete</button>  
               <button (click)="onClick(item.id)" style="margin-left: 20px;" class="btn btn-info">Edit </button> 
                
             </td>  
           </tr>
-          <button (click)="addClick()" style="margin-left: 20px;" class="btn btn-info">Add</button>  
+          <button (click)="addClick()" style="margin-left: 20px;" id="addbtn" class="btn btn-info">Add</button>  
         </tbody>  
       </table>  
     </div>  
