--- a/BakedinHeavenAngular/src/app/items/items.component.html
+++ b/BakedinHeavenAngular/src/app/items/items.component.html
@@ -2,7 +2,7 @@
   <div class="special-items">
     <h3>Special Items</h3>
     <ng-container *ngFor="let item of items"  >
-      <ul  class="items-disp">
+      <ul *ngIf="checkdate(item)" class="items-disp">
         <li *ngIf="item.isSpecial==true"
           [class.selected]="item === selectedItem"
           (click)="onSelect(item)">
@@ -18,7 +18,7 @@
     <li class ="item-details">IsVeg :{{selectedItem.isVeg}}</li>
     <li class ="item-details">Weight in grams :{{selectedItem.weightInGrams}}</li>
     <li class ="item-details">Kcal :{{selectedItem.kcal}}</li>
-    <li class ="item-details">availableDate :{{selectedItem.availabledate}}</li>
+    <li class ="item-details">availableDate :{{selectedItem.availabledate | date}}</li>
   </div>
 </div>
 <br>
@@ -26,7 +26,7 @@
   <div class ="daily-items">
     <h3>Items</h3>
     <ng-container *ngFor="let item of items">
-      <ul class="items-disp">
+      <ul  *ngIf="checkdate(item)" class="items-disp">
         <li  *ngIf="item.isSpecial==false"
           [class.selected]="item === selectedItem"
           (click)="onSelect(item)">
