--- a/BakedinHeavenAngular/src/app/home/home.component.css
+++ b/BakedinHeavenAngular/src/app/home/home.component.css
@@ -1,102 +1,99 @@
 
-.logo-part
-{
-    width: 100%;
-    height: 150px;
-    background-color: rgb(225, 238, 238);
-    
+.head{
+    background-color:white;
+    color:black;
+    height:100px;
+    border-bottom: 2px solid rgb(238, 174, 235);
+    overflow:hidden;
+    position:fixed;
+
+   
+
 }
-.login-part
-{
-    
-    width: 100%;
-    height: 450px;
-    margin: auto;
-    background-color: rgb(225, 238, 238);
-}
-.bakery-details{
-    height: 450px;
-    width: 50%;
-    
-}
-.login-form{
-    height: 450px;
-    width: 50%;
-    float: right;
-}
-#login{
-    width: 61%;
-    background-color:#7db8f0;
-    padding: 67px;
-    margin-top: 10px;
-    margin-left: 90px;
-    margin-right: 50px;
-    height:238px ;
+a:hover, a:active{
+    color:rgb(236, 156, 196);
+    text-decoration: none;
    
 }
-.login-label{
-    color:#1f1c1c;
-    font-size: 18px;
+.container{
+    margin:0;
+    padding:0;
+    max-width:100%
 }
-.inp{
-    width: 240px;  
-    height: 30px;  
-    border-color:white ;
-    border-radius: 3px;  
-    padding-left: 8px;  
-    outline-color:#4267b2;
+.bakeryimage{
+    width:100%;
+    padding:60px;
+    height:650px;
+    background: #f0f0f0;
 }
-#login-button{
-    background:#4267b2;
-    height: 45px;
-    border-color: #29487d;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    width: 75px;
-    font-size: large;
-    outline: none;
-} 
-body{
-    margin: 0;
+
+.menu-spacer{
+    flex: 1 1 auto;
 }
-p {
-    color: rgb(18, 84, 122);  
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    margin-top: 0;
-    text-align: left;
-    font-weight: bold;
-    margin-bottom: 0;
-    display: inline;
-    
+
+.links{
+    margin-top:45px;
+    margin-right:50px;
+}
+a{
+    font-size: medium;
 }
 .imagecontainer
 {
-    height:55%;
-    width:10%;
-    display: inline;
+    height: 278%;
+    width: 20%;
+    margin-top: 28px;
 }
-.bakeryimage{
-    padding-top: 10px;
-    width: 100%;
-    height: 83%;
-    padding-left: 20px;
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:white;
+    font-size: x-large;
+    margin-top: 168px;
+    border-bottom:Solid;
+    
+}
+.description{
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color:white;
+    font-size: large;
+    margin-top: 268px;
+    
+}
+#contact{
+    background-color:#d9a0c4;
+}
+.heading{
+    text-align:Center;
+    margin-top:15px;
+    
 }
 .contact{
-    padding-left: 20px;
-    background-color: rgb(216, 207, 207);
-    margin: 0;
-    width: 100%;
+    border-style: ridge;
+    padding:20px;
+    margin-top: 46px;
+    background: #f5e3e1;
+  
 }
-#signup-button{
-    background:#4267b2;
-    height: 30px;
-    border-color: #29487d;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-    width: 80px;
-    font-size: x-small;
-    outline: none;
-} 
+.bakery-details{
+    padding:150px 80px 0;
+    
+}
+.bakeryimage{
+    width:100%;
+    height: 644px;
+    background-color:white;
+    border: 2px dotted rgb(236, 156, 196);;
+    padding:20px;
+}
+.row{
+    padding-left:200px;
+    margin-top: 46px;
+}
+
+
