--- a/BakedinHeavenAngular/src/app/items/items.component.html
+++ b/BakedinHeavenAngular/src/app/items/items.component.html
@@ -1,39 +1,52 @@
-<div class="special-cont">
-  <div class="special-items">
-    <h3>Special Items</h3>
-    <ng-container *ngFor="let item of items"  >
-      <ul *ngIf="checkdate(item)" class="items-disp">
-        <li *ngIf="item.isSpecial==true"
-          [class.selected]="item === selectedItem"
-          (click)="onSelect(item)">
-          <span class="badge">{{item.id}}</span>{{item.name}}
-        </li>
-      </ul>
-    </ng-container>
-  </div>
-  <div class ="details" *ngIf="selectedItem">
-    <h4>{{selectedItem.name | uppercase}}</h4>
-    <li class ="item-details">Price per unit :{{selectedItem.price}}</li>
-    <li class ="item-details">Quantity:{{selectedItem.quantity}}</li>
-    <li class ="item-details">IsVeg :{{selectedItem.isVeg}}</li>
-    <li class ="item-details">Weight in grams :{{selectedItem.weightInGrams}}</li>
-    <li class ="item-details">Kcal :{{selectedItem.kcal}}</li>
-    <li class ="item-details">availableDate :{{selectedItem.availabledate | date}}</li>
-  </div>
+<div class="container">
+  <ng-container *ngFor="let item of items"  >
+    <div *ngIf="checkdate(item)" class="items-disp">
+      <div *ngIf="item.isSpecial==true" >
+        <mat-card class="mat-elevation-z4">
+
+          <mat-card-header>
+            <mat-card-title>{{item.name | uppercase}}</mat-card-title>
+            
+          </mat-card-header>
+      
+          <mat-card-content>
+            <p class ="item-details">Price per unit :{{item.price}}</p>
+            <p class ="item-details">Quantity:{{item.quantity}}</p>
+            <p class ="item-details">IsVeg :{{item.isVeg}}</p>
+            <p class ="item-details">Weight in grams :{{item.weightInGrams}}</p>
+            <p class ="item-details">Kcal :{{item.kcal}}</p>
+            <p class ="item-details">AvailableDate :{{item.availabledate | date}}</p>
+            
+          </mat-card-content>
+          
+        </mat-card> 
+        
+      </div>
+      <div *ngIf="item.isSpecial==false" >
+        <mat-card class="mat-elevation-z4">
+
+          <mat-card-header>
+            <mat-card-title>{{item.name | uppercase}}</mat-card-title>
+            
+          </mat-card-header>
+      
+          <mat-card-content>
+            <p class ="item-details">Price per unit :${{item.price}}</p>
+            <p class ="item-details">Quantity:{{item.quantity}}</p>
+            <p class ="item-details">IsVeg :{{item.isVeg}}</p>
+            <p class ="item-details">Weight in grams :{{item.weightInGrams}}g</p>
+            <p class ="item-details">Kcal :{{item.kcal}}</p>
+            <p class ="item-details">availableDate :{{item.availabledate | date}}</p>
+            
+          </mat-card-content>
+          
+        </mat-card> 
+        
+        
+        
+      </div>
+    </div>
+  </ng-container>
+  
 </div>
-<br>
-<div class="special-cont">
-  <div class ="daily-items">
-    <h3>Items</h3>
-    <ng-container *ngFor="let item of items">
-      <ul  *ngIf="checkdate(item)" class="items-disp">
-        <li  *ngIf="item.isSpecial==false"
-          [class.selected]="item === selectedItem"
-          (click)="onSelect(item)">
-          <span class="badge">{{item.id}}</span> {{item.name}}
-        </li>
-      </ul>
-    </ng-container>
-  </div>
-</div>  
 
